@@ -1,7 +1,9 @@
 degate (0.1.0) unstable; urgency=low
 
 	* Toggle fullscreen mode with F11
-	* ...
+	* Generate verilog code stubs and testbench stubs for standard cells
+	* Run a compile test for verilog code stubs directly from the Gate Edit Dialog (requires Icarus Verilog).
+	* Run gtkwave directly from the Gate Edit Dialog.
 	
  -- Martin Schobert <martin@weltregierung.de>  Wed, 19 Jan 2011 12:00:00 +0100
 
